LinuxCode/compiling_error.txt
D:\DSP\Project\Ver2.2.2\count_number.h:480:820: error: expected '}' at end of input
     4,    9,   17,   24,   29,   33,   38,   43,   43,   43,   43,   43,   42,   42,   42,   42,   42,   42,   42,   41,   40,   40,   40,   40,   40,   40,   41,   42,   42,   42,   42,   43,   44,   44,   44,   43,   42,   42,   42,   42,   42,   43,   44,   45,   45,   45,   46,   46,   46,   46,   48,   49,   48,   46,   49,   51,   51,   49,   43,   41,   44,   48,   52,   53,   52,   52,   52,   52,   52,   53,   53,   54,   54,   54,   54,   56,   56,   57,   57,   57,   60,   61,   61,   61,   61,   61,   61,   61,   60,   59,   59,   57,   56,   56,   56,   55,   55,   55,   55,   56,   56,   56,   56,   57,   58,   58,   59,   59,   59,   63,   67,   66,   64,   64,   64,   67,   68,   68,   67,   65,   65,   66,   67,   68,   68,   69,   69,   69,   69,   70,   71,   71,   71,   70,   70,   70,   69,   69,   67,   65,   63,   63,   62,   62,   61,   61,   61,   61,   61,   61,   61,   62,   62,   65,   65,   64,   65,   98,  107,   88,   69,   65,   67,   68,   66,   64,   64,   65,   66,   66,   65,   64,   63,   62,   61,   59,   58,   57,   56,   54,   53,   53,   53,   52,   52,   52,   51,   51,   51,   51,   51,   51,   51,   52,   53,   53,   54,   55,   58,   57,   56,   56,   55,   55,   55,   56,   56,   56,   55,   53,   52,   51,   53,   56,   53,   51,   48,   46,   45,   45,   45,   47,   48,   49,   50,   51,   51,   50,   49,   50,   50,   50,   50,   49,   49,   49,   47,   47,   47,   46,   45,   43,   43,   43,   42,   43,   43,   44,   42,   42,   43,   41,   41,   41,   40,   40,   40,   41,   41,   40,   39,   39,   38,   38,   38,   38,   38,   38,   38,   38,   38,   35,   33,   32,   32,   31,   31,   31,   31,   30,   30,   30,   29,   29,   29,   29,   28,   28,   28,   28,   28,   28,   27,   27,   27,   27,   27,   27,   27,   27,   28,   32,   31,   29,   28,   27,   27,   29,   30,   29,   28,   26,   22,   19,   15,    9,    3,    1,    1,    2,
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    ^~
D:\DSP\Project\Ver2.2.2\count_number.h:480:820: error: expected ',' or ';' at end of input
